--- a/index.html
+++ b/index.html
@@ -89,28 +89,30 @@
         <div class="row gy-4 align-items-center">
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="hero-content">
-              <h1 data-aos="fade-up" data-aos-delay="200">Assalam'ualaikum, I'm 
-              <span style="color: #3498db; text-decoration: none; font-size: 0.9em; font-weight: 600;">Jubaer Abdullah</span></h1>
+              <h1 data-aos="fade-up" data-aos-delay="200"> Hello , I'm 
+              <span style="color: #3498db; text-decoration: none; font-size: 0.9em; font-weight: 600;">Md Sabbir Hossain</span></h1>
               <h2 data-aos="fade-up" data-aos-delay="300"> Data <span class="typed" data-typed-items="Analyst,  Visualizer "></span></h2>
-              <p data-aos="fade-up" data-aos-delay="400">I am a statistics student at SUST with strong analytical skills. I focus on creating clear and meaningful data visualizations that help support better decision-making.</p>
+              <p data-aos="fade-up" data-aos-delay="400">Md Sabbir Hossain is a statistician and researcher specializing in data science, public and global health, and climate-environmental analytics. His work integrates advanced statistical modeling, machine learning, and deep learning to address health metrics and climate risk challenges. He has extensive experience with large-scale survey data and interdisciplinary research across low- and middle-income countries.</p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="500">
                 <a href="portfolio.html" class="btn btn-primary">View My Work</a>
                 <a href="contact.html" class="btn btn-outline">Get In Touch</a>
               </div>
               <div class="social-links d-flex justify-content-center">
-                <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
-                <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
+               <a href="https://scholar.google.com/citations?hl=en&tzom=420&user=zDrj_HIAAAAJ" target="_blank"><i class="bi bi-mortarboard"></i></a>
+               <a href="https://www.linkedin.com/in/md-sabbir-hossain-8b8095219/" target="_blank"><i class="bi bi-linkedin"></i></a>
+               <a href="https://orcid.org/my-orcid?orcid=0000-0001-7216-0925" target="_blank"><i class="bi bi-person-badge"></i></a>
+               <a href="https://www.researchgate.net/profile/Md-Hossain-928?ev=hdr_xprf" target="_blank"><i class="bi bi-journal-text"></i></a>
               </div>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="hero-image" data-aos="zoom-in" data-aos-delay="300">
               <div class="image-wrapper">
-                <img src="assets/img/profile/mypic.jpg" alt="image of sifat" class="img-fluid">
+                <img src="assets/img/profile/sabbir.jpeg" alt="image of sifat" class="img-fluid">
                 <div class="floating-elements">
                   <div class="floating-card design" data-aos="fade-left" data-aos-delay="700">
                     <i class="bi bi-palette"></i>
-                    <span>Visualization</span>
+                    <span>Mentorship</span>
                   </div>
                   <div class="floating-card code" data-aos="fade-right" data-aos-delay="800">
                     <i class="bi bi-code-slash"></i>
@@ -118,7 +120,7 @@
                   </div>
                   <div class="floating-card creativity" data-aos="fade-up" data-aos-delay="900">
                     <i class="bi bi-lightbulb"></i>
-                     <span>Data</span>
+                     <span>Teaching</span>
                   </div>
                 </div>
               </div>
@@ -135,11 +137,13 @@
  <footer id="footer" class="footer">
   <div class="container">
     <div class="copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Sabbir</strong> <span>All Rights Reserved<br></span></p>
     </div>
     <div class="social-links d-flex justify-content-center">
-      <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
+      <a href="https://scholar.google.com/citations?hl=en&tzom=420&user=zDrj_HIAAAAJ" target="_blank"><i class="bi bi-mortarboard"></i></a>
+      <a href="https://www.linkedin.com/in/md-sabbir-hossain-8b8095219/" target="_blank"><i class="bi bi-linkedin"></i></a>
+      <a href="https://orcid.org/my-orcid?orcid=0000-0001-7216-0925" target="_blank"><i class="bi bi-person-badge"></i></a>
+      <a href="https://www.researchgate.net/profile/Md-Hossain-928?ev=hdr_xprf" target="_blank"><i class="bi bi-journal-text"></i></a>
     </div>
   </div>
 </footer>
