--- a/about.html
+++ b/about.html
@@ -77,10 +77,7 @@
     <!-- About Section -->
     <section id="about" class="about section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <p>A junior data analyst and visualization enthusiast, passionate about making data understandable for everyone. Skilled in turning raw data into clear insights using modern analytical and visualization tools</p>
-      </div><!-- End Section Title -->
+      
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -89,10 +86,11 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="lead">I'm Jubaer, <br> a statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</h2>
+              <h2 class="lead">I'm Sabbir, <br> Md Sabbir Hossain is a Statistics graduate and early-career researcher from Sylhet, Bangladesh. He completed his BSc and MSc (Thesis) in Statistics from Shahjalal University of Science & Technology (SUST), where his thesis focused on tri-variate copula modeling of rainfall, temperature, and humidity for climate risk assessment in Bangladesh. 
+He is currently serving as an Adjunct Lecturer at North East University Bangladesh, teaching undergraduate-level statistics and probability courses. Alongside teaching, he has extensive research experience as a Research Assistant at SUST, working on advanced statistical modeling, missing data issues, complex survey data analysis, machine learning applications in public health, and climate and flood risk assessment. He is also engaged with Bangladesh Rice Research Institute (BRRI) under a World Bank-supported project, contributing to spatiotemporal climate analysis, flood mapping, and predictive modeling for disaster preparedness.
+Md Sabbir Hossain has authored and co-authored multiple peer-reviewed publications in high-impact and has reviewed manuscripts for journals such as PLOS ONE, JMIR Public Health and Surveillance, and Health Science Reports. His academic excellence has been recognized through multiple merit scholarships and awards, including Best Research Paper and Best Poster awards in national and international conferences. His research interests include Statistics, Public and Global Health, Health Metrics, Environmental Resources, Machine Learning, and Deep Learning, and data-driven decision-making using modern computational tools such as R, Python, STATA, and SQL.</h2>
               <p class="lead">
-               currently I am  an undergraduate student in Statistics at Shahjalal University of Science and Technology (SUST),  in my 3rd year (1st semester).
-                </p>
+                 </p>
 
               <div class="cta-group">
                 <a href="portfolio.html" class="btn-ghost">
@@ -107,46 +105,12 @@
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/mypic.jpg" alt="Portrait of Sifat" class="img-fluid profile-photo">
+              <img src="assets/img/profile/sabbir.jpeg" alt="Portrait of Sifat" class="img-fluid profile-photo">
             </figure>
           </div>
         </div>
         <!-- End Intro + Photo -->
 
-        <!-- Skills Grid -->
-        <div class="mb-5">
-          <div class="row g-4">
-            <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="120">
-              <div class="skill-item">
-                <i class="bi bi-bar-chart-fill"></i>
-                <h3>Data Analysis & Reporting</h3>
-                <p>Turn raw data into clear, actionable information. Using advanced tools and methods, we analyze datasets and present conclusions with clarity and confidence.</p>
-              </div>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="180">
-              <div class="skill-item">
-                <i class="bi bi-graph-up"></i>
-                <h3>Infographic & Social Media Design</h3>
-                <p>Visualize your message with data .I create clean, engaging templates for social media using your data — ideal for public awareness, marketing, and storytelling.</p>
-              </div>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="240">
-              <div class="skill-item">
-                <i class="bi bi-database"></i>
-                <h3>Data Research & Insights</h3>
-                <p>Discover trends that matter.I  dive deep into complex data, research emerging topics, and uncover meaningful insights to guide decision-making or create compelling narratives.</p>
-              </div>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
-              <div class="skill-item">
-                <i class="bi bi-camera"></i>
-                <h3>Programing Language </h3>
-                <p>Python,SPSS,STATA,SQL </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End Skills Grid -->
 
         
         <!-- Fun Facts -->
@@ -154,25 +118,25 @@
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
             <div class="fact-pill">
               <i class="bi bi-magic"></i>
-              <span> Data Visualization </span>
+              <span> Python </span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="160">
             <div class="fact-pill">
               <i class="bi bi-bar-chart-fill"></i>
-              <span>Data Analysis</span>
+              <span>R Programming</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="200">
             <div class="fact-pill">
               <i class="bi bi-database"></i>
-              <span>Database Management </span>
+              <span> STATA  </span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="240">
             <div class="fact-pill">
               <i class="bi bi-file-earmark-code"></i>
-              <span> Statistical Analysis </span>
+              <span> SQL </span>
             </div>
           </div>
         </div>
@@ -182,81 +146,6 @@
 
     </section><!-- /About Section -->
 
-    <!-- Skills Section -->
-    <section id="skills" class="skills section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
-        <p>skilled in data analysis, visualization, and dashboard development using Python, Excel, Power BI, and Tableau. Experienced in turning complex datasets into clear, actionable insights for decision-making.</p>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row g-4 skills-animation">
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
-            <div class="skill-box">
-              <h3>Tableau</h3>
-              <p>Expert in structuring semantic, accessible, and responsive dashboards.</p>
-              <span class="text-end d-block">90%</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
-            <div class="skill-box">
-              <h3>Power BI</h3>
-              <p>Skilled in crafting visually appealing and responsive designs.</p>
-              <span class="text-end d-block">90%</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
-            <div class="skill-box">
-              <h3>Excel</h3>
-              <p>Experienced in building dynamic and interactive reports.</p>
-              <span class="text-end d-block">90%</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
-            <div class="skill-box">
-              <h3>Python</h3>
-              <p>Proficient  data handling.</p>
-              <span class="text-end d-block">55%</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
-            <div class="skill-box">
-              <h3>SQL</h3>
-              <p>Proficient  in Database Management </p>
-              <span class="text-end d-block">70%</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </section><!-- /Skills Section -->
 
     <!-- Stats Section 
     <section id="stats" class="stats section dark-background">
@@ -437,12 +326,14 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sabbir</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-      <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
-    </div>
+       <a href="https://scholar.google.com/citations?hl=en&tzom=420&user=zDrj_HIAAAAJ" target="_blank"><i class="bi bi-mortarboard"></i></a>
+       <a href="https://www.linkedin.com/in/md-sabbir-hossain-8b8095219/" target="_blank"><i class="bi bi-linkedin"></i></a>
+       <a href="https://orcid.org/my-orcid?orcid=0000-0001-7216-0925" target="_blank"><i class="bi bi-person-badge"></i></a>
+       <a href="https://www.researchgate.net/profile/Md-Hossain-928?ev=hdr_xprf" target="_blank"><i class="bi bi-journal-text"></i></a>
+       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
