--- a/resume.html
+++ b/resume.html
@@ -1,246 +1,143 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Resume</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
+  <!-- Vendor CSS -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
+  <!-- Main CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
-
 </head>
 
 <body class="resume-page">
 
-<header id="header" class="header d-flex align-items-center light-background sticky-top">
-  <div class="container d-flex align-items-center justify-content-between position-relative">
+<main class="main">
 
+<section id="resume" class="resume section">
 
-    <!-- Mobile Menu Button (hamburger) -->
-    <i class="mobile-nav-toggle d-xl-none bi bi-list order-3 order-xl-1 ms-auto"></i>
-
-    <!-- Empty left balance for desktop -->
-    <div class="header-left-placeholder d-none d-xl-block"></div>
-
-    <!-- Center Nav (Desktop only) -->
-    <div class="nav-center position-absolute start-50 translate-middle-x d-none d-xl-block">
-      <nav id="navmenu" class="navmenu">
-        <div class="glass-nav">
-          <ul class="d-flex gap-4 m-0 list-unstyled">
-            <li><a href="index.html" >Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html" class="active" >Resume</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-
-    <!-- Mobile Nav (Hidden on desktop) -->
-    <nav id="navmenu" class="navmenu d-xl-none order-2 w-100">
-      <ul>
-        <li><a href="index.html" >Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="resume.html" class="active" >Resume</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Resume</h2>
   </div>
-</header>
 
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-  <main class="main">
+    <div class="row">
 
-    <!-- Resume Section -->
-    <section id="resume" class="resume section">
+      <!-- ================= LEFT : EDUCATION ================= -->
+      <div class="col-lg-6">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-      </div><!-- End Section Title -->
+        <div class="resume-item">
+          <h3 class="resume-title">Education</h3>
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+          <div class="resume-content">
 
-        <div class="row">
-          <div class="col-lg-6">
+            <article class="education-item">
+              <h4>Master of Science (Thesis) in Statistics</h4>
+              <h5>2024 – 2026</h5>
+              <p class="institution"><em>Shahjalal University of Science and Technology, Sylhet</em></p>
+              <p>CGPA 3.90 / 4.00 with Distinction (3rd out of 50)</p>
+              <p>
+                <strong>Thesis:</strong>
+                Trivariate Copula Modeling of Rainfall, Temperature, and Humidity during the Monsoon Season in Sylhet, Bangladesh: Implications for Climate Risk Assessment
+              </p>
+            </article>
 
-            <!-- Education Section -->
-            <div class="resume-item" data-aos="fade-up">
-              <h3 class="resume-title">Education</h3>
+            <article class="education-item">
+              <h4>Bachelor of Science (Honours) in Statistics</h4>
+              <h5>2018 – 2023</h5>
+              <p class="institution"><em>Shahjalal University of Science & Technology, Sylhet</em></p>
+              <p>Department of Statistics</p>
+              <p>CGPA 3.79 / 4.00 with Distinction (4th out of 98)</p>
+            </article>
 
-              <div class="resume-content">
-                <article class="education-item">
-                  <h4>Bachelor of Science in Statistics</h4>
-                  <h5>2023 - Present</h5>
-                  <p class="institution"><em>Shahjalal University of Science and Technology, Sylhet</em></p>
-                  <p>3rd Year 1st Semester </p>
-                  <p>On-going </p>
-                </article>
-
-                <article class="education-item">
-                  <h4>Higher Secondary Certificate (HSC)</h4>
-                  <h5>202o - 2022</h5>
-                  <p class="institution"><em>BAF Shaheen College Dhaka</em></p>
-                  <p>Science</p>
-                  <p>GPA: 5.00</p>
-                </article>
-
-                <article class="education-item">
-                  <h4>Secondary School Certificate (SSC)</h4>
-                  <h5>2015 - 2020</h5>
-                  <p class="institution"><em>Azim Uddin High School</em></p>
-                  <p>Science</p>
-                  <p>GPA: 5.00</p>
-                </article>
-
-              </div>
-            </div><!-- End Education Section -->
-
-            <!-- Professional Skills Section -->
-            <div class="resume-item skills-animation" data-aos="fade-up">
-              <h3 class="resume-title">Professional Skills</h3>
-
-              <div class="resume-content">
-                <div class="skill-item">
-                  <h4>Data Analysis</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>Data Visualization</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>Infographic report Design</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>Database Management</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Professional Skills Section -->
-          </div>
-
-          <div class="col-lg-6">
-            <!-- Experience Section -->
-            <div class="resume-item" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="resume-title">Professional Experience</h3>
-
-              <div class="resume-content">
-                <article class="experience-item">
-                  <h4>Junior Executive Member </h4>
-                  <h5> Dec 2024 - Sep 2025</h5>
-                  <p class="company"><em>SUST Data Science Club</em></p>
-                  <ul>
-                    <li>...</li>
-                  </ul>
-                </article>
-
-                <article class="experience-item">
-                  <h4>Ass. Research & Analytics Associate </h4>
-                  <h5> Sep 2025 - Present</h5>
-                  <p class="company"><em>SUST Data Science Club</em></p>
-                  <ul>
-                    <li>...</li>
-                  </ul>
-                </article>
-
-                <article class="experience-item">
-                  <h4>Associate Map Operations</h4>
-                  <h5>Oct 2025 - Present</h5>
-                  <p class="company"><em>Pathao Ltd.</em></p>
-                  <ul>
-                    <li>....</li>
-                    
-                  </ul>
-                </article>
-
-              </div>
-            </div><!-- End Experience Section -->
           </div>
         </div>
-
       </div>
 
-    </section><!-- /Resume Section -->
+      <!-- ================= RIGHT : EXPERIENCE ================= -->
+      <div class="col-lg-6">
 
-  </main>
+        <div class="resume-item">
+          <h3 class="resume-title">Experience</h3>
 
-  <footer id="footer" class="footer">
+          <div class="resume-content">
 
-    <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
+            <article class="experience-item">
+              <h4>Adjunct Lecturer</h4>
+              <h5>July 2025 – January 2026</h5>
+              <p class="company"><em>North East University Bangladesh</em></p>
+              <ul>
+                <li>Teach undergraduate courses in Introduction to Statistics and Applied Statistics & Probability</li>
+                <li>Design course materials and assessments to strengthen applied statistical understanding</li>
+              </ul>
+            </article>
+
+            <article class="experience-item">
+              <h4>Research Assistant</h4>
+              <h5>June 2020 – Present</h5>
+              <p class="company"><em>SUST Research Center</em></p>
+              <ul>
+                <li>Applied copula-based dependence modeling for flood hazard assessment in Sylhet</li>
+                <li>Developed probabilistic deep learning models for agricultural loss estimation</li>
+                <li>Designed statistical frameworks for climate risk and hydrological analysis</li>
+              </ul>
+            </article>
+
+            <article class="experience-item">
+              <h4>Senior Research Assistant</h4>
+              <h5>March 2021 – Present</h5>
+              <p class="company"><em>Biostatistics, Epidemiology & Public Health Research Group</em></p>
+              <ul>
+                <li>Handled missing data problems in cross-sectional health surveys</li>
+                <li>Built analysis pipelines for datasets from 92 LMICs</li>
+                <li>Applied ML & DL techniques to complex survey data</li>
+              </ul>
+            </article>
+
+            <article class="experience-item">
+              <h4>Research Assistant</h4>
+              <h5>January 2024 – Present</h5>
+              <p class="company"><em>Bangladesh Rice Research Institute (BRRI)</em></p>
+              <ul>
+                <li>Spatiotemporal climate trend analysis and precipitation forecasting</li>
+                <li>Flood mapping and susceptibility zonation using SAR data</li>
+                <li>Developed large-scale flood prediction models</li>
+              </ul>
+            </article>
+
+            <article class="experience-item">
+              <h4>Peer Reviewer</h4>
+              <ul class="peer-review-list">
+                <li>PLOS ONE</li>
+                <li>JMIR Public Health and Surveillance</li>
+                <li>Health Science Reports</li>
+                <li>Environmental Psychology Research</li>
+              </ul>
+            </article>
+
+          </div>
+        </div>
       </div>
-       <div class="social-links d-flex justify-content-center">
-      <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
+
     </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-       <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      </div>
-    </div>
+  </div>
+</section>
 
-  </footer>
+</main>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Preloader -->
-  <div id="preloader"></div>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+<!-- Vendor JS -->
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/aos/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </body>
-
 </html>
