--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="content">
                   <h4>Our Location</h4>
-                  <p>Varsity Gate, Akhalia</p>
+                  <p>Shahporan Hall , SUST , Sylhet</p>
                   <p>Sylhet-3114, Bangladesh</p>
                 </div>
               </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="content">
                   <h4>Phone Number</h4>
-                  <p>+880 1750976938</p>
+                  <p>+8801311919804</p>
                 </div>
               </div>
 
@@ -122,8 +122,8 @@
                 </div>
                 <div class="content">
                   <h4>Email Address</h4>
-                  <p>jubaersus@gmail.com</p>
-                  <p>.</p>
+                  <p>bmsabbirhossainsakib@gmail.com</p>
+                  <p>sabbir.sta049@gmail.com</p>
                 </div>
               </div>
             </div>
@@ -182,9 +182,11 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer </strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-      <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
-    </div>
+      <a href="https://scholar.google.com/citations?hl=en&tzom=420&user=zDrj_HIAAAAJ" target="_blank"><i class="bi bi-mortarboard"></i></a>
+      <a href="https://www.linkedin.com/in/md-sabbir-hossain-8b8095219/" target="_blank"><i class="bi bi-linkedin"></i></a>
+      <a href="https://orcid.org/my-orcid?orcid=0000-0001-7216-0925" target="_blank"><i class="bi bi-person-badge"></i></a>
+      <a href="https://www.researchgate.net/profile/Md-Hossain-928?ev=hdr_xprf" target="_blank"><i class="bi bi-journal-text"></i></a>
+   </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
