--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio</title>
+  <title>Research</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -91,9 +91,9 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-Python">Python</li>
-            <li data-filter=".filter-GIS">GIS</li>
-            <li data-filter=".filter-Sql">Sql</li>
+            <li data-filter=".filter-Publication">Publication</li>
+            <li data-filter=".filter-Project">Project</li>
+            <li data-filter=".filter-Presentation">Conference Presentation</li>
             <li data-filter=".filter-PowerBI">PowerBI</li>
             <li data-filter=".filter-Tableau">Tableau</li>
             <li data-filter=".filter-DBMS">DBMS</li>
@@ -105,62 +105,63 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Tableau">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Publication">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/MUSLIM.png" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/1p.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/MUSLIM.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://public.tableau.com/app/profile/jubaer.abdullah/viz/MuslimPopulationSpectrum_FromCoreNationstoMinorityCommunities/Dashboard2" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/1p.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(23)00232-8/fulltext#fig3" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Creative Agency Website</h4>
-                  <p>UI/UX Design & Prototype</p>
+                  <h4>Antibiotic prescription from qualified sources for children with fever/cough: cross-sectional study from 59 low- and middle-income countries</h4>
+                  <p>Orginal Research</p>
                   <div class="portfolio-tags">
-                    <span>Figma</span>
-                    <span>UI/UX</span>
-                    <span>Web Experience</span>
+                    <span>Public Health</span>
+                    <span>Child Health</span>
+                    <span>Antibiotic</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-GIS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Project">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/railac.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/pr1.png" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/railac.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%97%E0%A6%A4-%E0%A7%AF-%E0%A6%AC%E0%A6%9B%E0%A6%B0-%E0%A6%AE%E0%A6%A4%E0%A6%B0-%E0%A6%AC%E0%A6%B0%E0%A6%B9%E0%A6%AE%E0%A6%A3%E0%A6%AC%E0%A6%A1%E0%A6%AF-%E0%A6%A5%E0%A6%95-%E0%A6%B8%E0%A6%B2%E0%A6%9F-ugcPost-7386465648366854144-ZS7c?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link" target="_blank" rel="noopener noreferrer" ><i class="bi bi-link"></i></a>
+                    <a href="https://github.com/Sabbir664768/Copula-Joint-Flood-Peak-Volume-Surma-Meghna-Basin" class="portfolio-details-link" target="_blank" rel="noopener noreferrer" ><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Rail Accident  Analysis</h4>
-                  <p>Case Study </p>
+                  <h4>Advance Research Grant, SUST Research Centre	</h4>
+                  <p>Orginal Research</p>
                   <div class="portfolio-tags">
-                    <span>Research</span>
-                    <span>Report</span>
+                    <span>Climate Risk Assesment</span>
+                    <span>Trivariate Copula</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-GIS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Presentation">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/elec.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/prs1.jpeg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/elec.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%AC%E0%A6%B2%E0%A6%A6%E0%A6%B6%E0%A6%B0-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%A4-%E0%A6%9C%E0%A6%A8%E0%A6%97%E0%A6%A8-%E0%A6%AA%E0%A6%B0%E0%A6%A7%E0%A6%A8-%E0%A6%A6%E0%A6%87%E0%A6%9F-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%95-ugcPost-7360381203364909057-3htr?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link" target="_blank" rel="noopener noreferrer" ><i class="bi bi-link"></i></a>
+                    <a href="https://icasds2025.isrt.ac.bd/" class="portfolio-details-link" target="_blank" rel="noopener noreferrer" ><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Election Analysis</h4>
-                  <p>Analytical Problem Solving</p>
+                  <h4>Does Mother's Functional Difficulty Affect Children’s Functioning? Findings from 26 Low- and Middle-Income Countries</h4>
+                  <h6>International Conference on Applied Statistics and Data Science, 2025</h6>
+                  <p>Poster</p>
                   <div class="portfolio-tags">
-                    <span>Datawrapper</span>
-                    <span>Professional Summary</span>
+                    <span>Public Health</span>
+                    <span>Child Health</span>
                   </div>
                 </div>
               </div>
