--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="research.html">Research</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -70,7 +70,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="research.html">Research</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
