--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <li><a href="index.html" >Home</a></li>
             <li><a href="about.html" class="active" >About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="portfolio.html">Research</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -63,7 +63,7 @@
         <li><a href="index.html" >Home</a></li>
         <li><a href="about.html" class="active" >About</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html">Research</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -86,9 +86,9 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="lead">I'm Sabbir, <br> Md Sabbir Hossain is a Statistics graduate and early-career researcher from Sylhet, Bangladesh. He completed his BSc and MSc (Thesis) in Statistics from Shahjalal University of Science & Technology (SUST), where his thesis focused on tri-variate copula modeling of rainfall, temperature, and humidity for climate risk assessment in Bangladesh. 
-He is currently serving as an Adjunct Lecturer at North East University Bangladesh, teaching undergraduate-level statistics and probability courses. Alongside teaching, he has extensive research experience as a Research Assistant at SUST, working on advanced statistical modeling, missing data issues, complex survey data analysis, machine learning applications in public health, and climate and flood risk assessment. He is also engaged with Bangladesh Rice Research Institute (BRRI) under a World Bank-supported project, contributing to spatiotemporal climate analysis, flood mapping, and predictive modeling for disaster preparedness.
-Md Sabbir Hossain has authored and co-authored multiple peer-reviewed publications in high-impact and has reviewed manuscripts for journals such as PLOS ONE, JMIR Public Health and Surveillance, and Health Science Reports. His academic excellence has been recognized through multiple merit scholarships and awards, including Best Research Paper and Best Poster awards in national and international conferences. His research interests include Statistics, Public and Global Health, Health Metrics, Environmental Resources, Machine Learning, and Deep Learning, and data-driven decision-making using modern computational tools such as R, Python, STATA, and SQL.</h2>
+              <h2 class="lead">I'm Sabbir, <br> Md Sabbir Hossain is a Statistics graduate and early-career portfolioer from Sylhet, Bangladesh. He completed his BSc and MSc (Thesis) in Statistics from Shahjalal University of Science & Technology (SUST), where his thesis focused on tri-variate copula modeling of rainfall, temperature, and humidity for climate risk assessment in Bangladesh. 
+He is currently serving as an Adjunct Lecturer at North East University Bangladesh, teaching undergraduate-level statistics and probability courses. Alongside teaching, he has extensive portfolio experience as a portfolio Assistant at SUST, working on advanced statistical modeling, missing data issues, complex survey data analysis, machine learning applications in public health, and climate and flood risk assessment. He is also engaged with Bangladesh Rice portfolio Institute (BRRI) under a World Bank-supported project, contributing to spatiotemporal climate analysis, flood mapping, and predictive modeling for disaster preparedness.
+Md Sabbir Hossain has authored and co-authored multiple peer-reviewed publications in high-impact and has reviewed manuscripts for journals such as PLOS ONE, JMIR Public Health and Surveillance, and Health Science Reports. His academic excellence has been recognized through multiple merit scholarships and awards, including Best portfolio Paper and Best Poster awards in national and international conferences. His portfolio interests include Statistics, Public and Global Health, Health Metrics, Environmental Resources, Machine Learning, and Deep Learning, and data-driven decision-making using modern computational tools such as R, Python, STATA, and SQL.</h2>
               <p class="lead">
                  </p>
 
@@ -332,7 +332,7 @@ Md Sabbir Hossain has authored and co-authored multiple peer-reviewed publicatio
        <a href="https://scholar.google.com/citations?hl=en&tzom=420&user=zDrj_HIAAAAJ" target="_blank"><i class="bi bi-mortarboard"></i></a>
        <a href="https://www.linkedin.com/in/md-sabbir-hossain-8b8095219/" target="_blank"><i class="bi bi-linkedin"></i></a>
        <a href="https://orcid.org/my-orcid?orcid=0000-0001-7216-0925" target="_blank"><i class="bi bi-person-badge"></i></a>
-       <a href="https://www.researchgate.net/profile/Md-Hossain-928?ev=hdr_xprf" target="_blank"><i class="bi bi-journal-text"></i></a>
+       <a href="https://www.portfoliogate.net/profile/Md-Hossain-928?ev=hdr_xprf" target="_blank"><i class="bi bi-journal-text"></i></a>
        </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
