--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <h2 data-aos="fade-up" data-aos-delay="300"> <span class="typed" data-typed-items="Statistician, Data Scientist, Public Health Researcher, Health Metrics Analyst, Climate Risk & Environmental Modeler "></span></h2>
               <p data-aos="fade-up" data-aos-delay="400">Md Sabbir Hossain is a statistician and researcher specializing in data science, public and global health, and climate-environmental analytics. His work integrates advanced statistical modeling, machine learning, and deep learning to address health metrics and climate risk challenges. He has extensive experience with large-scale survey data and interdisciplinary research across low- and middle-income countries.</p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="500">
-                <a href="portfolio.html" class="btn btn-primary">View My Work</a>
+                <a href="research.html" class="btn btn-primary">View My Work</a>
                 <a href="contact.html" class="btn btn-outline">Get In Touch</a>
               </div>
               <div class="social-links d-flex justify-content-center">
