--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <li><a href="index.html" >Home</a></li>
             <li><a href="about.html" class="active" >About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="portfolio.html">Research</a></li>
+            <li><a href="portfolio.html">portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -63,7 +63,7 @@
         <li><a href="index.html" >Home</a></li>
         <li><a href="about.html" class="active" >About</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="portfolio.html">Research</a></li>
+        <li><a href="portfolio.html">portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
