--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="portfolio.html">portfolio</a></li>
+            <li><a href="portfolio.html">Research</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -70,7 +70,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="portfolio.html">portfolio</a></li>
+        <li><a href="portfolio.html">Research</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -91,8 +91,8 @@
             <div class="hero-content">
               <h1 data-aos="fade-up" data-aos-delay="200"> Hello , I'm 
               <span style="color: #3498db; text-decoration: none; font-size: 0.9em; font-weight: 600;">Md Sabbir Hossain</span></h1>
-              <h2 data-aos="fade-up" data-aos-delay="300"> <span class="typed" data-typed-items="Statistician, Data Scientist, Public Health portfolioer, Health Metrics Analyst, Climate Risk & Environmental Modeler "></span></h2>
-              <p data-aos="fade-up" data-aos-delay="400">Md Sabbir Hossain is a statistician and portfolioer specializing in data science, public and global health, and climate-environmental analytics. His work integrates advanced statistical modeling, machine learning, and deep learning to address health metrics and climate risk challenges. He has extensive experience with large-scale survey data and interdisciplinary portfolio across low- and middle-income countries.</p>
+              <h2 data-aos="fade-up" data-aos-delay="300"> <span class="typed" data-typed-items="Statistician, Data Scientist, Public Health Researcher, Health Metrics Analyst, Climate Risk & Environmental Modeler "></span></h2>
+              <p data-aos="fade-up" data-aos-delay="400">Md Sabbir Hossain is a statistician and researcher specializing in data science, public and global health, and climate-environmental analytics. His work integrates advanced statistical modeling, machine learning, and deep learning to address health metrics and climate risk challenges. He has extensive experience with large-scale survey data and interdisciplinary research across low- and middle-income countries.</p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="500">
                 <a href="portfolio.html" class="btn btn-primary">View My Work</a>
                 <a href="contact.html" class="btn btn-outline">Get In Touch</a>
@@ -116,7 +116,7 @@
                   </div>
                   <div class="floating-card code" data-aos="fade-right" data-aos-delay="800">
                     <i class="bi bi-code-slash"></i>
-                    <span>portfolio</span>
+                    <span>Research</span>
                   </div>
                   <div class="floating-card creativity" data-aos="fade-up" data-aos-delay="900">
                     <i class="bi bi-lightbulb"></i>
