--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="hero-content">
               <h1 data-aos="fade-up" data-aos-delay="200"> Hello , I'm 
-              <span style="color: #3498db; text-decoration: none; font-size: 0.9em; font-weight: 600;">Md Sabbir Hossain</span></h1>
+              <span style="color: #3498db; text-decoration: none; font-size: 0.9em; font-weight: 600;">Sabbir</span></h1>
               <h2 data-aos="fade-up" data-aos-delay="300"> <span class="typed" data-typed-items="Statistician, Data Scientist, Public Health Researcher, Health Metrics Analyst, Climate Risk & Environmental Modeler "></span></h2>
               <p data-aos="fade-up" data-aos-delay="400">Md Sabbir Hossain is a statistician and researcher specializing in data science, public and global health, and climate-environmental analytics. His work integrates advanced statistical modeling, machine learning, and deep learning to address health metrics and climate risk challenges. He has extensive experience with large-scale survey data and interdisciplinary research across low- and middle-income countries.</p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="500">
