--- a/about.html
+++ b/about.html
@@ -96,9 +96,14 @@ Md Sabbir Hossain has authored and co-authored multiple peer-reviewed publicatio
                 <a href="portfolio.html" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
-                <a href="resume.html" class="link-underline">
-                  Download Resume <i class="bi bi-download"></i>
-                </a>
+               <a
+  href="https://docs.google.com/document/d/1fNjQQI3B_9EfPjmccbzrTGNTarsJOTeE/export?format=pdf"
+  class="link-underline"
+  target="_blank"
+>
+  Download Resume <i class="bi bi-download"></i>
+</a>
+
               </div>
             </div>
           </div>
